# responsible-ai-toolbox

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  MNIST-Translation-Robustness.py  PRELIM_DOCS.md  README.md  SPDX.spdx  pyproject.toml  pyrightconfig.json  setup.cfg  setup.py  versioneer.py
.github/: dependabot.yml
.github/workflows/: nightly.yml  publish_docs.yml  publish_rai_experiments.yml  pypi_publish.yml  test_docs.yml  tox_run.yml
docs/: .buildinfo  README.md  api_reference.html  changes.html  conda_env.yml  explanation.html  genindex.html  how_tos.html  index.html  objects.inv  ref_augmentations.html  ref_datasets.html  ref_losses.html  ref_mushin.html  ref_optim.html  ref_perturbation.html  ref_utils.html  requirements.txt  search.html  searchindex.js  tutorials.html
docs/_modules/: index.html
docs/_modules/rai_toolbox/: _utils.html
docs/_modules/rai_toolbox/_utils/: stateful.html
docs/_modules/rai_toolbox/datasets/: _imagenet_base.html  cifar10_extensions.html  cifar_corruptions.html
docs/_modules/rai_toolbox/losses/: _jensen_shannon_divergence.html  _utils.html
docs/_modules/rai_toolbox/mushin/: workflows.html
docs/_modules/rai_toolbox/optim/: frank_wolfe.html  lp_space.html  misc.html  optimizer.html
docs/_modules/rai_toolbox/perturbations/: init.html  models.html  solvers.html
docs/_sources/: api_reference.rst.txt  changes.rst.txt  how_tos.rst.txt  index.rst.txt  ref_augmentations.rst.txt  ref_datasets.rst.txt  ref_mushin.rst.txt  ref_optim.rst.txt  ref_perturbation.rst.txt  ref_utils.rst.txt  tutorials.rst.txt
docs/_sources/how_to/: custom_optim.rst.txt  deterministic_workflow.rst.txt  univ_adv_pert.rst.txt
docs/_sources/tutorials/: Building-Workflows.ipynb.txt  CIFAR10-Adversarial-Perturbations.ipynb.txt
docs/explanation/: perturbations.html  placeholder.html
docs/how_to/: custom_optim.html  deterministic_workflow.html  hydraddp.html  placeholder.html  univ_adv_pert.html
docs/source/: api_reference.rst  changes.rst  conf.py  explanation.rst  how_tos.rst  index.rst  ref_augmentations.rst  ref_datasets.rst  ref_losses.rst  ref_mushin.rst  ref_optim.rst  ref_perturbation.rst  ref_utils.rst  tutorials.rst
docs/source/explanation/: crs.rst  perturbations.rst  placeholder.rst
docs/source/how_to/: custom_optim.rst  deterministic_workflow.rst  hydraddp.rst  placeholder.rst  univ_adv_pert.rst
docs/source/tutorials/: Building-Workflows.ipynb  CIFAR10-Adversarial-Perturbations.ipynb  ImageNet-Concept-Probing.ipynb  placeholder.rst
docs/tutorials/: Building-Workflows.html  Building-Workflows.ipynb  CIFAR10-Adversarial-Perturbations.html  CIFAR10-Adversarial-Perturbations.ipynb  ImageNet-Concept-Probing.html  ImageNet-Concept-Probing.ipynb  placeholder.html
examples/: .gitignore  CIFAR10-Adversarial-Perturbations.ipynb  ImageNet-Concept-Probing.ipynb  MNIST-Translation-Robustness.ipynb  MNISTC-Robustness.ipynb  MNISTC_study.py
examples/fourier/: utils.py
experiments/: README.md  setup.cfg  setup.py
experiments/adversarial_training/: README.md  TestRobustness.ipynb  configs.py  solver.py  test_experiment.py  train.py
experiments/benchmarking/: benchmarks.ipynb
experiments/examples/: CIFAR10-Adversarial-Perturbations.ipynb
experiments/examples/fourier/: FourierBasisPerturbations.ipynb  utils.py
experiments/madry/: Experiments.ipynb  README.md  Visualizations.ipynb  configs.py  lightning.py  madry.py  run.py  test_experiment.py
experiments/src/rai_experiments/: __init__.py
experiments/src/rai_experiments/models/: _resnet_blocks.py  pretrained.py  resnet.py  small_resnet.py
experiments/src/rai_experiments/utils/: imagenet_labels.py  visualizations.py
experiments/tests/: test_rai_experiments.py
experiments/universal_perturbation/: README.md  UniversalPerturbation.ipynb  configs.py  solver.py  test_experiment.py  train.py
experiments/xai/: ConceptProbing.ipynb  Example.ipynb  Perturbations.ipynb  README.md  configs.py  test_experiment.py
project_tooling/: add_header.py  test_headers.py
src/rai_toolbox/: __init__.py  _typing.py  _version.py  errors.py
src/rai_toolbox/_utils/: __init__.py  itertools.py  stateful.py  tqdm.py
src/rai_toolbox/augmentations/: __init__.py
src/rai_toolbox/augmentations/augmix/: __init__.py  _implementation.py  transforms.py
src/rai_toolbox/augmentations/fourier/: __init__.py  _fourier_basis.py  _implementations.py  _utils.py  transforms.py
src/rai_toolbox/datasets/: __init__.py  _cifar10_base.py  _imagenet_base.py  _mnist_c.py  _utils.py  cifar10_extensions.py  cifar_corruptions.py  mnist_corruptions.py
src/rai_toolbox/losses/: __init__.py  _jensen_shannon_divergence.py  _utils.py
src/rai_toolbox/metrics/: __init__.py  _calibration_errors.py
src/rai_toolbox/mushin/: __init__.py  _compatibility.py  _lightning.py  _perturbations.py  _pl_main.py  _pl_rerun_hydra.py  _tasks.py  _trainer.py  _utils.py  hydra.py  typing.py  workflows.py
src/rai_toolbox/mushin/lightning/: __init__.py  _pl_main.py  callbacks.py  launchers.py
src/rai_toolbox/optim/: __init__.py  array_like.py  frank_wolfe.py  lp_space.py  misc.py  optimizer.py
src/rai_toolbox/perturbations/: __init__.py  init.py  models.py  solvers.py
tests/: annotations.py  conftest.py  test_optim.py  test_optim_state.py  test_project.py  test_typing.py
tests/test_augmentations/: __init__.py  _old_implementation.py  test_fourier.py
tests/test_augmix/: test_losses.py  test_transforms.py
tests/test_datasets/: test_imagenet.py
tests/test_mushin/: test_lightning_callbacks.py  test_lightning_hydra_ddp.py  test_lightning_hydra_rerun_ddp.py  test_solve_perturbations.py  test_trainer.py  test_workflows.py  test_zen.py
tests/test_optim/: test_array_like.py  test_chained_optim.py  test_grad_transformation.py  test_misc.py  test_stateful.py  test_validation.py
tests/test_perturbations/: test_init.py  test_models.py  test_solvers.py
tests/test_utils/: test_internal_utils.py  test_itertools.py  test_loss_utils.py  test_other_utils.py  test_stateful.py  test_stateful_utils.py
(+11 files in other folders)
