# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[metadata]
name = rai-toolbox
version = attr: rai_toolbox.__version__
description = Responsible AI
license = MIT
url = https://github.com/mit-ll-responsible-ai/responsible-ai-toolbox
author = Ryan Soklaski, Justin Goodwin
author_email = ryan.soklaski@ll.mit.edu

[options]
python_requires = >=3.7
package_dir=
    =src
packages = find:
install_requires =
    numpy > 1.17.2, != 1.19.3
    torchvision >= 0.10.0
    torch >= 1.9.0
    torchmetrics >= 0.6.0
    typing-extensions >= 3.10.0.1

[options.packages.find]
where = src
exclude = tests, tests.*


[options.extras_require]
tests =
    pytest >= 3.8
    hypothesis >= 6.16.0
    mygrad >= 2.0.0
    hydra-zen >= 0.6.0
mushin = 
    pytorch-lightning >= 1.5.0

[versioneer]
VCS = git
style = pep440
versionfile_source = src/rai_toolbox/_version.py
versionfile_build = rai_toolbox/_version.py
tag_prefix = v
parentdir_prefix = rai_toolbox-


[isort]
known_first_party = rai_toolbox, rai_experiments, tests
profile = black
multi_line_output = 3


[coverage:report]
omit = src/rai_toolbox/_version.py


[tox:tox]
envlist = py38
toxworkdir = build/tox
requires = tox-conda

[testenv]
extras = 
    tests
    mushin
commands = pytest --junitxml={toxworkdir}/xunit-tests-{envname}.xml -o junit_suite_name=pytest-{envname} --hypothesis-profile ci tests


[testenv:coverage]
setenv = NUMBA_DISABLE_JIT=1
usedevelop = true
basepython = python3.8
extras = 
    tests
    mushin
deps = coverage
       pytest-cov
commands = pytest --cov-report term-missing --cov-report xml:{toxworkdir}/xunit-coverage.xml --cov-config=setup.cfg --cov-branch --cov=rai_toolbox --hypothesis-profile ci tests

# runs experiments that don't require additional dependencies
[testenv:base-experiments]
basepython = python3.8
extras = 
    tests
    mushin
deps = 
       experiments/
commands = 
   pytest experiments/adversarial_training/test_experiment.py
   pytest experiments/madry/test_experiment.py
   pytest experiments/universal_perturbation/test_experiment.py
   pytest experiments/xai/test_experiment.py


[testenv:bandit]
basepython = python3.8
deps = bandit
commands = bandit -f json -o {toxworkdir}/security-bandit.json -r {envsitepackagesdir}/responsible-ai-toolkit


[testenv:owasp-depcheck]
basepython = python3.8
