[metadata]
name = rai_experiments
version = attr: rai_experiments.__version__
description = Convenience functions and utilities for rai-toolbox tutorials and demonstrations.
long_description = file: README.md, LICENSE.txt
license = MIT
author=Olivia Brown, Justin Goodwin, Ryan Soklaski, Michael Yee
author_email=ryan.soklaski@ll.mit.edu

[options]
install_requires =
    matplotlib >= 2.0.0
    hydra_zen >= 0.9.0
    pytorch-lightning >= 1.5.0
    protobuf <= 3.20.1
    pooch >= 1.6.0
    torchvision >= 0.10.0
python_requires = 
    >=3.7
package_dir=
    =src
packages=find:


[options.packages.find]
where=src
exclude =
    tests
    tests.*
